fixing overflow issues with card images

--- a/assets/css/homepageStyle.css
+++ b/assets/css/homepageStyle.css
@@ -54,6 +54,7 @@
 .card-img {
   opacity: 90%;
   border: 1px solid black;
+  overflow: hidden;
 }
 
 .card-img-overlay {
